@@ -19,7 +19,11 @@ my $prereqs  = {
     'Module::Build' => '0.4004',
     'version' => '0.88'
   },
+  'recommends' => {
+    'CSS::LESS' => 'v0.0.3'
+  },
   'requires' => {
+    'App::Ack' => '2.12',
     'Class::Usul' => 'v0.39.0',
     'Daemon::Control' => '0.000009',
     'File::DataClass' => 'v0.34.0',
