@@ -42,6 +42,8 @@ var/root/css/theme-green.css
 var/root/css/theme-navy.css
 var/root/css/theme-red.css
 var/root/docs/app-doh.json
+var/root/docs/assets/bilbo_speaks.jpg
+var/root/docs/assets/mushy_mind.jpg
 var/root/docs/de/01_Examples/03_Test.md
 var/root/docs/en/00_Getting_Started.md
 var/root/docs/en/01_Examples/01_GitHub_Flavored_Markdown.md
@@ -68,12 +70,14 @@ var/root/less/theme-blue.less
 var/root/less/theme-green.less
 var/root/less/theme-navy.less
 var/root/less/theme-red.less
-var/root/skins/default/create-file.tt
-var/root/skins/default/documentation.tt
-var/root/skins/default/footer.tt
-var/root/skins/default/index.tt
-var/root/skins/default/left_column.tt
-var/root/skins/default/navbar.tt
-var/root/skins/default/rename-file.tt
-var/root/skins/default/right_column.tt
-var/root/skins/default/wrapper.tt
+var/root/templates/default/create-file.tt
+var/root/templates/default/documentation.tt
+var/root/templates/default/footer.tt
+var/root/templates/default/index.tt
+var/root/templates/default/left_column.tt
+var/root/templates/default/navbar.tt
+var/root/templates/default/rename-file.tt
+var/root/templates/default/right_column.tt
+var/root/templates/default/search-file.tt
+var/root/templates/default/upload-file.tt
+var/root/templates/default/wrapper.tt
