@@ -3,6 +3,7 @@ name = App-Doh
 [Prereqs]
 perl              = 5.010001
 namespace::sweep  = 0.006
+App::Ack          = 2.12
 Class::Usul       = v0.39.0
 Daemon::Control   = 0.000009
 File::DataClass   = v0.34.0
