@@ -2,7 +2,7 @@ package App::Doh;
 
 use 5.010001;
 use namespace::sweep;
-use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 53 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev: 54 $ =~ /\d+/gmx );
 
 use Moo;
 use Class::Usul::Constants;
@@ -37,7 +37,7 @@ App::Doh - An easy way to document a project using Markdown
 
 =head1 Version
 
-This documents version v0.1.$Rev: 53 $ of L<App::Doh>
+This documents version v0.1.$Rev: 54 $ of L<App::Doh>
 
 =head1 Description
 
@@ -55,12 +55,15 @@ None
 
 =head1 Diagnostics
 
-Starting the daemon with the C<-D> option will cause it to print debug
-information to the log file F<var/logs/daemon.log>
+Exporting C<DOH_SERVER_DEBUG> and setting it to true causes the
+development server to start logging at the debug level
 
 The development server can be started using
 
    plackup bin/doh-server
+
+Starting the daemon with the C<-D> option will cause it to print debug
+information to the log file F<var/logs/daemon.log>
 
 =head1 Dependencies
 
