@@ -1,7 +1,7 @@
-<form action="[% links.base_uri %]search"
+<form action="[% links.base_uri %]search-results"
      enctype="application/x-www-form-urlencoded"
       method="get" name="search-file">
-   <input  class="pathname" name="query" type="textfield">
-   <button class="btn btn-submit" name="_method" type="submit"
-           value="search_file">[% loc( 'Search' ) %]</button>
+   <input  class="pathname" name="query"
+            type="textfield" value="[% prefs.query %]">
+   <button class="btn btn-submit" type="submit">[% loc( 'Search' ) %]</button>
 </form>
